--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,11 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
+DB_CONNECTION=mongodb
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=27017
 DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_USERNAME=admin
 DB_PASSWORD=secret
 
 CACHE_DRIVER=file
