--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "alcaeus/mongo-php-adapter": "^1.0",
         "jenssegers/mongodb": "^3.0",
-        "mongodb/mongodb": "^1.0"
+        "mongodb/mongodb": "^1.0",
+        "twbs/bootstrap": "^3.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
